# FinalMajorProjectGame

./: .clang-format  CMakeLists.txt  LICENSE
3DPlatformer/: CMakeLists.txt
3DPlatformer/shaders/: fragment.glsl  vertex.glsl
3DPlatformer/src/: 3DPlatformer.cpp  3DPlatformer.h  main.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/Core/: Application.h  DLLExports.h  EngineInit.h  EntryPoint.h  Game.h  Logger.h
Engine/include/Engine/Platform/: Window.h
Engine/include/Engine/Renderer/Api/: OpenGLRenderer.h  Renderer.h  RendererFactory.h
Engine/include/Engine/Renderer/Buffers/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
Engine/include/Engine/Renderer/Resources/: Shader.h  Texture.h
Engine/include/Engine/Utils/: FileUtils.h
Engine/src/: main.cpp
Engine/src/Core/: Application.cpp  EngineInit.cpp  Game.cpp  Logger.cpp
Engine/src/Platform/: Window.cpp
Engine/src/Renderer/Api/: OpenGLRenderer.cpp  RendererFactory.cpp
Engine/src/Renderer/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Renderer/Resources/: Shader.cpp  Texture.cpp
Engine/src/Utils/: FileUtils.cpp
